src/objects/AutomationEdge__Automation_Interface__c.object
<CustomObject>
    <description>Automation Integration object to process Remedyforce Requests</description>
    <fields>
        <fullName>AutomationEdge__Allow_Execute_From__c</fullName>
        <label>Allow Execute From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomationEdge__Allow_Execute_To__c</fullName>
        <label>Allow Execute To</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00</fullName>
                </value>
                <value>
                    <fullName>01:00</fullName>
                </value>
                <value>
                    <fullName>02:00</fullName>
                </value>
                <value>
                    <fullName>03:00</fullName>
                </value>
                <value>
                    <fullName>04:00</fullName>
                </value>
                <value>
                    <fullName>05:00</fullName>
                </value>
                <value>
                    <fullName>06:00</fullName>
                </value>
                <value>
                    <fullName>07:00</fullName>
                </value>
                <value>
                    <fullName>08:00</fullName>
                </value>
                <value>
                    <fullName>09:00</fullName>
                </value>
                <value>
                    <fullName>10:00</fullName>
                </value>
                <value>
                    <fullName>11:00</fullName>
                </value>
                <value>
                    <fullName>12:00</fullName>
                </value>
                <value>
                    <fullName>13:00</fullName>
                </value>
                <value>
                    <fullName>14:00</fullName>
                </value>
                <value>
                    <fullName>15:00</fullName>
                </value>
                <value>
                    <fullName>16:00</fullName>
                </value>
                <value>
                    <fullName>17:00</fullName>
                </value>
                <value>
                    <fullName>18:00</fullName>
                </value>
                <value>
                    <fullName>19:00</fullName>
                </value>
                <value>
                    <fullName>20:00</fullName>
                </value>
                <value>
                    <fullName>21:00</fullName>
                </value>
                <value>
                    <fullName>22:00</fullName>
                </value>
                <value>
                    <fullName>23:00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomationEdge__IncidentId__c</fullName>
        <label>IncidentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Late_Submission_Time__c</fullName>
        <label>Late Submission Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Process_Time__c</fullName>
        <formula>(AutomationEdge__Response_TimeStamp__c -  AutomationEdge__Read_TimeStamp__c)*24*60*60
+ ( VALUE(MID(TEXT(AutomationEdge__Response_TimeStamp__c),18,2)) - VALUE(MID(TEXT(AutomationEdge__Read_TimeStamp__c),18,2)) )</formula>
        <label>Process Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Read_TimeStamp__c</fullName>
        <label>Read TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__RequestJSON__c</fullName>
        <label>RequestJSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Request_Name__c</fullName>
        <description>Name of the Task Template</description>
        <label>Request Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__ResponseError__c</fullName>
        <label>ResponseError</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Response_TimeStamp__c</fullName>
        <label>Response TimeStamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Scheduler_Type__c</fullName>
        <label>Scheduler Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Immediate</fullName>
                </value>
                <value>
                    <fullName>Delayed</fullName>
                </value>
                <value>
                    <fullName>Time Window</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomationEdge__Status_Message__c</fullName>
        <label>Status Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NEW</fullName>
                </value>
                <value>
                    <fullName>READ</fullName>
                </value>
                <value>
                    <fullName>PROCESSED WITH SUCCESS</fullName>
                </value>
                <value>
                    <fullName>PROCESSED WITH FAILURE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AutomationEdge__Success_Response__c</fullName>
        <label>Success Response</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__TaskId__c</fullName>
        <label>TaskId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__Total_Execution_Time__c</fullName>
        <formula>IF(ISBLANK(AutomationEdge__Response_TimeStamp__c) ,&apos;&apos;,(
TEXT(
ROUND((AutomationEdge__Response_TimeStamp__c - CreatedDate)*24,0)
         )  &amp;&quot; Hours &quot; &amp;
TEXT(
ROUND(MOD((AutomationEdge__Response_TimeStamp__c - CreatedDate)*1440,60),0)
) &amp;&quot; Minutes &quot; &amp;

TEXT(
ROUND(MOD((AutomationEdge__Response_TimeStamp__c - CreatedDate)*86400,60),0)
) &amp;&quot; Seconds &quot;)

)</formula>
        <label>Total Execution Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AutomationEdge__isQueueable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isQueueable</label>
        <type>Checkbox</type>
    </fields>
    <label>Automation Interface</label>
    <listViews>
        <fullName>AutomationEdge__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VyomAutomation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Automation Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>